User can add a message to an Offer

--- a/app/assets/stylesheets/application/modules/forms.sass
+++ b/app/assets/stylesheets/application/modules/forms.sass
@@ -42,7 +42,7 @@ form
   select
     cursor: pointer
 
-  input[readonly="readonly"]
+  input.token[readonly="readonly"]
     text-align: center
     font-family: monospace
     cursor: text
