show message in popup

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -19,3 +19,5 @@
 @import "./application/modules/alert"
 @import "./application/modules/profile-tag"
 @import "./application/modules/empty-state"
+@import "./application/modules/popup"
+@import "./application/modules/clickable"
