add github last commit hash to site

--- a/app/assets/stylesheets/application/modules/nav.sass
+++ b/app/assets/stylesheets/application/modules/nav.sass
@@ -20,6 +20,19 @@
       margin-right: 8px
       width: 20px
       text-align: center
+  .revision
+    position: absolute
+    top: auto
+    left: 0
+    right: 0
+    bottom: 0
+    padding: 14px
+    font-size: 12px
+    text-align: center
+    a
+      color: $grey
+      &:hover
+        color: $soft-grey
 @media (max-width: 720px)
   .nav
     display: none
