--- a/app/views/public/privacy.html.haml
+++ b/app/views/public/privacy.html.haml
@@ -118,5 +118,5 @@
 %p
   If you have any questions about this privacy policy or Dashous's treatment of
   your personal information, please write by email to&nbsp;
-  %a( href="mailto:brett@dashous.com" )> brett@dashous.com
+  %a( href="mailto:#{Settings.admin.email}" )>= Settings.admin.email
   \.
