--- a/app/views/public/terms.html.haml
+++ b/app/views/public/terms.html.haml
@@ -291,5 +291,5 @@
 
 %p
   You can contact Dashous by email to&nbsp;
-  %a( href="mailto:brett@dashous.com" )> brett@dashous.com
+  %a( href="mailto:#{Settings.admin.email}" )>= Settings.admin.email
   \.
