trade request descriptions

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -21,3 +21,6 @@
 @import "./application/modules/empty-state"
 @import "./application/modules/popup"
 @import "./application/modules/clickable"
+@import "./application/modules/whitespaced"
+
+@import "./application/modules/grid"
