improve warning message

--- a/app/views/users/offers/new.html.haml
+++ b/app/views/users/offers/new.html.haml
@@ -20,11 +20,8 @@
   %h2 Warning, Avoid Scammers:
   %p
     %strong
-      Do not extend payment to anyone you have not met in person.
-  %p
-    %strong
-      Beware offers involving shipping
-    \- deal with locals you can meet in person.
+      Deal locally, face-to-face
+    \- meet in a public place.
   %p
     %strong
       Never wire funds (e.g. Western Union)
