add an about page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -93,7 +93,7 @@
       = link_to 'Github', Settings.git.github_url, target: '_blank'
       = link_to 'Reddit', 'https://www.reddit.com/r/dashous', target: '_blank'
       = mail_to Settings.admin.email, 'Contact'
-      = link_to 'Donate', donate_path
+      = link_to 'About', about_path
       %span Dashous LLC
 
     :javascript
