--- a/app/views/public/about.html.haml
+++ b/app/views/public/about.html.haml
@@ -5,7 +5,7 @@
 %h4 Mission Statement
 
 %p
-  Deliver worldwide access to the best form of money.
+  Provide worldwide access to the best form of money.
 
 %h4 Origins
 
