--- a/app/views/public/about.html.haml
+++ b/app/views/public/about.html.haml
@@ -19,7 +19,7 @@
   by the Dash Treasury.
 
 %p
-  The goal was to replicate the functionality of
+  The goal was to replicate the base functionality of
   = link_to 'LocalBitcoins.com', 'https://localbitcoins.com', target: '_blank'
   for the Dash community.
 
