--- a/app/views/public/about.html.haml
+++ b/app/views/public/about.html.haml
@@ -32,7 +32,7 @@
 %p There will be a primary focus on:
 %ul
   %li Simple user experiences
-  %li A generalized approach to trading that ensures assessablility in all countries and regions
+  %li A generalized approach to trading that ensures accessibility in all countries and regions
   %li Transparency
   %li Security
 
