replace GET for login and signup

--- a/app/assets/javascripts/templates/authentication/login.hbs
+++ b/app/assets/javascripts/templates/authentication/login.hbs
@@ -1,1 +1,33 @@
-<h1>Login (test)</h1>
+<h1>Login</h1>
+<hr />
+
+<form class="new_user" id="new_user" action="/login" accept-charset="UTF-8" method="post">
+
+  <input name="utf8" type="hidden" value="✓" />
+  <input type="hidden" name="authenticity_token" value="{{formToken}}" />
+  <input value="1" type="hidden" name="user[remember_me]" id="user_remember_me" />
+
+  <div class="field">
+    <label for="user_username">Username</label>
+    <input autofocus="autofocus" type="text" name="user[username]" id="user_username" />
+  </div>
+
+  <div class="field">
+    <label for="user_password">Password</label>
+    <input autocomplete="off" type="password" name="user[password]" id="user_password" />
+  </div>
+
+  <div class="actions">
+    <input type="submit" name="commit" value="Login" data-disable-with="Login" />
+  </div>
+
+</form>
+
+<p>
+  <a href="/u/password/new">Forgot your password?</a>
+</p>
+
+<p>
+  <a href="/u/confirmation/new">Didn't receive confirmation instructions?</a>
+</p>
+
