--- a/app/assets/javascripts/templates/authentication/signup.hbs
+++ b/app/assets/javascripts/templates/authentication/signup.hbs
@@ -6,25 +6,25 @@
   <div class="field" data-field-for="email">
     <label for="user_email">Email *</label>
     <input autofocus="autofocus" type="email" name="user[email]" id="user_email" />
-    <div class="error-message"></div>
+    <div class="js-error-message error-message"></div>
   </div>
 
   <div class="field" data-field-for="username">
     <label for="user_username">Username * (used to login)</label>
     <input type="text" name="user[username]" id="user_username" />
-    <div class="error-message"></div>
+    <div class="js-error-message error-message"></div>
   </div>
 
   <div class="field" data-field-for="password">
     <label for="user_password">Password * (6 characters minimum)</label>
     <input autocomplete="off" type="password" name="user[password]" id="user_password" />
-    <div class="error-message"></div>
+    <div class="js-error-message error-message"></div>
   </div>
 
   <div class="field" data-field-for="password_confirmation">
     <label for="user_password_confirmation">Password Confirmation *</label>
     <input autocomplete="off" type="password" name="user[password_confirmation]" id="user_password_confirmation" />
-    <div class="error-message"></div>
+    <div class="js-error-message error-message"></div>
   </div>
 
   <div class="field" data-field-for="terms_and_conditions">
@@ -32,7 +32,7 @@
       <input type="checkbox" value="1" name="user[terms_and_conditions]" id="user_terms_and_conditions" />
       I accept the <a target="_blank" href="/terms">terms and conditions</a> *
     </label>
-    <div class="error-message"></div>
+    <div class="js-error-message error-message"></div>
   </div>
 
   <div class="actions">
