--- a/app/assets/stylesheets/application/modules/forms.sass
+++ b/app/assets/stylesheets/application/modules/forms.sass
@@ -49,8 +49,9 @@ form
     font-family: monospace
     cursor: text
 
-  .error-message
-    margin: 5px 0 0
+.error-message
+  margin: 5px 0 0
+  color: $danger-red
 
 .field_with_errors
   display: inline
