Give Bhargavi credit for awesome Design direction.

--- a/app/views/public/about.html.haml
+++ b/app/views/public/about.html.haml
@@ -19,6 +19,10 @@
   by the Dash Treasury.
 
 %p
+  The initial UI/UX direction was led by
+  #{link_to 'Bhargavi Sivakumar', 'http://kbhargavi.com', target: '_blank'}.
+
+%p
   The goal was to replicate the base functionality of
   = link_to 'LocalBitcoins.com', 'https://localbitcoins.com', target: '_blank'
   for the Dash community.
