Use correct last name.

--- a/app/views/public/about.html.haml
+++ b/app/views/public/about.html.haml
@@ -20,7 +20,7 @@
 
 %p
   The initial UI/UX direction was led by
-  #{link_to 'Bhargavi Sivakumar', 'http://kbhargavi.com', target: '_blank'}.
+  #{link_to 'Bhargavi Kamakshivalli', 'http://kbhargavi.com', target: '_blank'}.
 
 %p
   The goal was to replicate the base functionality of
