add some color to the ui

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -22,5 +22,7 @@
 @import "./application/modules/popup"
 @import "./application/modules/clickable"
 @import "./application/modules/whitespaced"
+@import "./application/modules/dotted-status"
+@import "./application/modules/link"
 
 @import "./application/modules/grid"
