Add Heap Analytics

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,7 @@
 
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
+    = render 'heap_analytics'
   %body
     .popup
       .overlay{onclick: 'window.closePopup()'}
