Maxmind DB, GDPR

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
 
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
-    = render 'heap_analytics'
+    = render 'heap_analytics' if @gdpr.cookies_allowed?
   %body
     .popup
       .overlay{onclick: 'window.closePopup()'}
@@ -95,16 +95,8 @@
       = link_to 'About', about_path
       %span Dashous LLC
 
+    = render 'google_analytics' if @gdpr.cookies_allowed?
     :javascript
-
-      // Google Analytics
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '#{Settings.google_analytics.key}', 'auto');
-      ga('send', 'pageview');
-
       // Authenticity Token
       Dashous.formToken = '#{form_authenticity_token}';
 
